--- a/demoMenu.html
+++ b/demoMenu.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>菜谱</title>
     <link rel="stylesheet" href="css/foods/menu.css">
     <link rel="stylesheet" href="css/foods/banner.css">
     <link rel="stylesheet" href="css/button.css">
@@ -523,9 +523,7 @@
     		<li><a href="#"><img src="images/YY.png" id="img55" /></a></li>
     	</ul>
     </div>
-    <div>
-        <button onclick="topFunction()" class="myBtn" >返回顶部❤</button>
-    </div>
+
 </body>
 
 </script>
