--- a/index.html
+++ b/index.html
@@ -93,19 +93,19 @@
                         <a class="on" href="demoMain.html">首页</a>
                     </li>
                     <li>
-                        <a href="demo1.html">川菜</a>
+                        <a href="川菜.html">川菜</a>
                     </li>
                     <li>
                         <a href="粤菜.html">粤菜</a>
                     </li>
                     <li>
-                        <a href="demo1.html">苏菜</a>
+                        <a href="苏菜.html">苏菜</a>
                     </li>
                     <li>
-                        <a href="demo1.html">鲁菜</a>
+                        <a href="鲁菜.html">鲁菜</a>
                     </li>
                     <li>
-                        <a href="demo1.html">健康菜单</a>
+                        <a href="健康菜单.html">健康菜单</a>
                     </li>
                     <li>
                         <a href="demoMenu.html">食谱</a>
