--- a/粤菜.html
+++ b/粤菜.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/button.css">
     <link rel="stylesheet" href="css/scroll.css">
     <link rel="stylesheet" href="css/top.css">
+    <link rel="stylesheet" href="css/fixed.css">
 </head>
 
 <body id="scroll">
