--- a/川菜.html
+++ b/川菜.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>chuan</title>
     <link rel="stylesheet" href="css/top.css">
+    <link rel="stylesheet" href="css/fixed.css">
     <link rel="stylesheet" href="css/button.css">
     <link rel="stylesheet" href="css/scroll.css">
     <link rel="stylesheet" href="css/chuan/my.css">
