--- a/鲁菜.html
+++ b/鲁菜.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/button.css">
     <link rel="stylesheet" href="css/scroll.css">
     <link rel="stylesheet" href="css/box.css">
+    <link rel="stylesheet" href="css/fixed.css">
     <link rel="stylesheet" href="css/lu/container.css">
     <link rel="stylesheet" href="css/lu/box.css">
 </head>
