--- a/苏菜.html
+++ b/苏菜.html
@@ -283,7 +283,7 @@
             <div class="nav">
                 <ul>
                     <li>
-                        <a class="on" href="demoMain.html">首页</a>
+                        <a href="demoMain.html">首页</a>
                     </li>
                     <li>
                         <a href="demo1.html">川菜</a>
@@ -292,7 +292,7 @@
                         <a href="粤菜.html">粤菜</a>
                     </li>
                     <li>
-                        <a href="demo1.html">苏菜</a>
+                        <a class="on" href="demo1.html" style="color:rgb(209, 18, 18)">苏菜</a>
                     </li>
                     <li>
                         <a href="demo1.html">鲁菜</a>
