--- a/鲁菜.html
+++ b/鲁菜.html
@@ -25,25 +25,25 @@
             <div class="nav">
                 <ul>
                     <li>
-                        <a href="demoMain.html">首页</a>
+                        <a href="index.html">首页</a>
                     </li>
                     <li>
-                        <a href="demo1.html">川菜</a>
+                        <a href="川菜.html">川菜</a>
                     </li>
                     <li>
                         <a href="粤菜.html">粤菜</a>
                     </li>
                     <li>
-                        <a href="demo1.html">苏菜</a>
+                        <a href="苏菜.html">苏菜</a>
                     </li>
                     <li>
-                        <a class="on" href="demo1.html">鲁菜</a>
+                        <a class="on" href="鲁菜.html">鲁菜</a>
                     </li>
                     <li>
-                        <a href="demo1.html">健康菜单</a>
+                        <a href="健康菜单.html">健康菜单</a>
                     </li>
                     <li>
-                        <a href="demo my.html">食谱</a>
+                        <a href="demoMenu.html">食谱</a>
                     </li>
                 </ul>
             </div>
