--- a/苏菜.html
+++ b/苏菜.html
@@ -283,10 +283,10 @@
             <div class="nav">
                 <ul>
                     <li>
-                        <a href="demoMain.html">首页</a>
+                        <a href="index.html">首页</a>
                     </li>
                     <li>
-                        <a href="demo1.html">川菜</a>
+                        <a href="川菜.html">川菜</a>
                     </li>
                     <li>
                         <a href="粤菜.html">粤菜</a>
@@ -295,10 +295,10 @@
                         <a class="on" href="demo1.html" style="color:rgb(209, 18, 18)">苏菜</a>
                     </li>
                     <li>
-                        <a href="demo1.html">鲁菜</a>
+                        <a href="鲁菜.html">鲁菜</a>
                     </li>
                     <li>
-                        <a href="demo1.html">健康菜单</a>
+                        <a href="健康菜单.html">健康菜单</a>
                     </li>
                     <li>
                         <a href="demoMenu.html">食谱</a>
